Add new logos and description.

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ javaVersion=17
 localVersion=1.0.0-FC
 owner=Chisels&Bits
 modId=chiselsandbits
+description=A Minecraft mod about creating endless custom decorations using in game materials.\n\nWell that's pretty broad, but its accurate, C&B takes existing blocks in your game world and lets you manipulate them together to create new custom creations, sculpting, copying, sawing, rotating, measuring and building is all possible at a micro-scale.\n\nThe possibilities are virtually endless.
 
 ### Dependency versioning
 minecraftVersion=1.20.4
