--- a/common/accesstransformer.cfg
+++ b/common/accesstransformer.cfg
@@ -94,3 +94,5 @@ public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen render
 public net.minecraft.client.renderer.LevelRenderer renderShape(Lcom/mojang/blaze3d/vertex/PoseStack;Lcom/mojang/blaze3d/vertex/VertexConsumer;Lnet/minecraft/world/phys/shapes/VoxelShape;DDDFFFF)V # renderShape
 public net.minecraft.client.gui.screens.inventory.AbstractContainerScreen isHovering(Lnet/minecraft/world/inventory/Slot;DD)Z # isHovering
 public net.minecraft.world.inventory.AbstractContainerMenu containerListeners
+
+public net.minecraft.client.resources.model.WeightedBakedModel totalWeight # totalWeight
