--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ org.gradle.debug=false
 javaVersion=17
 
 ### Versioning
-localVersion=1.0.0-FC
-owner=Chisels&Bits
+localVersion=1.1.10-FC
+creator=Chisels&Bits
 modId=chiselsandbits
 description=A Minecraft mod about creating endless custom decorations using in game materials.\n\nWell that's pretty broad, but its accurate, C&B takes existing blocks in your game world and lets you manipulate them together to create new custom creations, sculpting, copying, sawing, rotating, measuring and building is all possible at a micro-scale.\n\nThe possibilities are virtually endless.
 
@@ -21,11 +21,11 @@ jetbrainsAnnotationsVersion=23.0.0
 fabricLoaderVersion=0.15.6
 fabricVersion=0.95.4
 forgeVersion=20.4.147-beta
-scenaVersion=1.0.136
+scenaVersion=1.0.138
 lz4Version=1.8.0
 
 # Metadata
-author=OrionDevelopment
+author=Chisels&Bits
 
 # Maven data
 githubUrl=https://github.com/Chisels&Bits/Chisels&Bits
